jilles      2006/04/15 22:43:28 UTC	(20060415-5091)
  Log:
  - operserv kline -> akill
  - user ipv6 addresses are supported on charybdis/ratbox/hyperion
  - clarify that user ipv6 addresses are not supported on ircu
  

  Changes:	Modified:
  +18 -5	trunk/doc/IRCD (File Modified) 


gxti        2006/04/15 05:07:54 UTC	(20060415-5089)
  Log:
  pingspam: Redirect blame to NeoStats, add two notices.
  

  Changes:	Modified:
  +4 -2		trunk/contrib/os_pingspam.c (File Modified) 


w00t        2006/04/14 14:59:46 UTC	(20060414-5087)
  Log:
  Rework of fixing of warnings, port fixes over to userserv instead of being naughty.

  Changes:	Modified:
  +1 -3		trunk/modules/nickserv/identify.c (File Modified) 
  +5 -9		trunk/modules/nickserv/info.c (File Modified) 
  +10 -15	trunk/modules/nickserv/resetpass.c (File Modified) 
  +1 -1		trunk/modules/userserv/info.c (File Modified) 
  +1 -1		trunk/modules/userserv/resetpass.c (File Modified) 


jilles      2006/04/14 12:33:34 UTC	(20060414-5085)
  Log:
  Don't introduce a service with a UID if the ircd does
  not support UIDs when loading it at runtime.
  

  Changes:	Modified:
  +1 -1		trunk/src/servtree.c (File Modified) 


w00t        2006/04/14 12:02:39 UTC	(20060414-5083)
  Log:
  And from configure.

  Changes:	Modified:
  +1 -2		trunk/configure (File Modified) 


w00t        2006/04/14 11:59:47 UTC	(20060414-5081)
  Log:
  Don't attempt to build dbtool, either

  Changes:	Modified:
  +1 -1		trunk/Makefile.in (File Modified) 
  +1 -5		trunk/Makefile.win32 (File Modified) 


w00t        2006/04/14 11:46:53 UTC	(20060414-5079)
  Log:
  dbtool is long not relevant, use the contrib module instead.

  Changes:	Modified:
  + -		trunk/dbtool/ (File Deleted) 


w00t        2006/04/14 11:45:22 UTC	(20060414-5077)
  Log:
  Strict fixes.

  Changes:	Modified:
  +0 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +0 -1		trunk/modules/nickserv/help.c (File Modified) 
  +3 -1		trunk/modules/nickserv/identify.c (File Modified) 