@@ -1,3 +1,11 @@
+w00t        2006/04/16 01:04:24 UTC	(20060416-5093)
+  Log:
+  Fix: Send wallops under inspircd, except when no protocol modules are loaded - this cannot be fixed, as inspircd requires commands be sent by a valid nick, and not a server as the sender.
+
+  Changes:	Modified:
+  +30 -1	trunk/protocol/inspircd.c (File Modified) 
+
+
 jilles      2006/04/15 22:43:28 UTC	(20060415-5091)
   Log:
   - operserv kline -> akill
